# service-adsb-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  conf.toml.example  justfile
.github/workflows/: docker.yml  release.yml
src/: cli.rs  dashboard.rs  lib.rs  logger.rs  main.rs  receiver.rs  toml.rs
src/assets/: dashboard.html
